# Customer-Discovery-Platform

./: .gitignore  README.md  app.py  pyproject.toml
customer_discovery_platform/: README.md  backend.py  parsing.py
docs/: test.txt
llm_faiss_index/: index.faiss  index.pkl
